# stdin-to-cloudwatch

./: .env  Cargo.toml  LICENSE  README.md
src/: log.rs  main.rs  option.rs
